<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtChoseLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/dilSec"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgLanguage"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChoseLanguage">

        <RadioButton
            android:id="@+id/rbTurkce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:textSize="20dp"
            android:padding="8dp"
            android:text="@string/turkce" />

        <RadioButton
            android:id="@+id/rbEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/ingilizce" />
    </RadioGroup>

    <Button
        android:id="@+id/btnChoseLanguage"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="@color/colorBlueMain"
        android:text="@string/diliSec"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgLanguage" />

</androidx.constraintlayout.widget.ConstraintLayout>